fixed navbar z-index and positioning, added welcome link, deployed site on GH -> fix achievement boxes

--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,19 @@ body {
     background-color: #ffebf1; 
     color: white;
     font-family: 'Courier New', Courier, monospace;
+    padding-top: 80px;
 }
 
 /* Top Nav Bar CSS Styling */
 nav{
-   background-color: #ff3773;
    opacity: 75%;
-   box-shadow: 3px 3px 5px black; 
+   
+   top: 0;
+   width: 100%;
+   position: fixed;
+   z-index: 9999;
+   
+  
 }
 nav ul{
     width: 100%;
@@ -30,12 +36,12 @@ nav ul{
     align-items: center;
     list-style: none;
     padding-top: 25px;
-    top: 0;
-    position: fixed;
+    position: relative;
     
 }
 nav li {
     height: 50px;
+    
 }
 nav li:first-child{
     margin-right: auto;
@@ -49,6 +55,7 @@ nav a{
     vertical-align: middle;
     text-decoration: none;
     color: black;
+    
 
 }
 nav a:hover {
@@ -225,7 +232,7 @@ nav a:hover {
 .rightContent {
     color: black;
     flex: 1 1 80%;
-    max-width: 55%;
+    max-width: 60%;
     padding-left: 20px;
     position: static;
     
@@ -318,6 +325,7 @@ nav a:hover {
 .education {
     display: grid;
     grid-template-columns: 45%, 45%;
+    grid-template-rows: 70%, 30%;
     column-gap: 5px;
     margin-top: 50px;
     margin-bottom: 30px;
@@ -336,10 +344,17 @@ nav a:hover {
 .educationItem1{
     grid-column: 1;
     padding-left: 20px;
+    grid-row: 1;
 }
 .educationItem2{
     grid-column: 2;
     padding-left: 20px;
+    grid-row: 1;
+}
+
+.educationItem3{
+    grid-column: span;
+    grid-row: 2;
 }
 
 .education li{
@@ -352,7 +367,7 @@ nav a:hover {
 .achievements{
     display: grid;
     grid-template-columns: 30%, 30%, 30%;
-    grid-template-rows: 45%, 45%;
+    grid-template-rows: 30%, 30%;
     column-gap: 5px;
     width: 100%;
     height: 600px;
@@ -363,9 +378,10 @@ nav a:hover {
 
 .achievements ul{
     display: grid;
+    list-style: none;
 }
 
-.achievements li{
+/* .achievements li{
     display: grid;
     justify-content: center;
     vertical-align: middle;
@@ -376,7 +392,7 @@ nav a:hover {
     height: 70%;
     border-radius: 10%;
     font-size: 30px;
-}
+} */
 
 .languages {
     display: grid;
@@ -419,6 +435,8 @@ nav a:hover {
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1), inset 0 2px 8px rgba(255, 255, 255, 0.2); /* Depth and inner glow */
 }
 
+
+
 .liquid-glass-element::after {
     content: '';
     position:relative ;
@@ -432,6 +450,8 @@ nav a:hover {
     filter: blur(1px) drop-shadow(5px 2px 3px black) brightness(120%); /* Shine and subtle shadow */
     z-index: -1; /* Position behind the main element content */
 }
+
+
 /*Mobile Devices*/
 @media(max-width: 800px){
     .hideOnMobile{
